--- a/stand.html
+++ b/stand.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/stand.css">
 </head>
 <body>
-<!--navigation-->
+<!--navigation--------------------------------------------------------------------------------->
 <section class="section-nav">
 	<div class="content-section-nav">
 		<div class="stand-blog">
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 </section>
-<!--header 3col-->
+<!--header 3col---------------------------------------------------------------------------------------------->
 <section class="section-header">
 	<div class="content-section-header">
 		<div class="col-4">
@@ -70,7 +70,7 @@
 		</div>
 	</div>
 </section>
-<!--stand bloc html template-->
+<!--stand bloc html template-------------------------------------------------------------------------->
 <section class="section-stand-blog-html">
 	<div class="content-section-stand-blog-html">
 		<div class="conten-content-stand-blog-html">
@@ -84,7 +84,7 @@
 		</div>
 	</div>
 </section>
-<!--life style section col2-->
+<!--life style section col2-------------------------------------------------------------------------->
 <section class="section-deux-col">
 	<div class="content-secion-deux-col">
 		<div class="col-9">
