--- a/stand.html
+++ b/stand.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 	<meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>nazira web expert</title>
 	<link rel="stylesheet" type="text/css" href="lib/ionicons/css/ionicons.min.css">
-	<link rel="stylesheet" type="text/css" href="css/stand.css"> -->
+	<link rel="stylesheet" type="text/css" href="css/stand.css">
 </head>
 <body>
 <!--navigation--------------------------------------------------------------------------------->
